sample/projectFolder/objects/Company_apps__c.object
<CustomObject>
    <fields>
        <fullName>app_category__c</fullName>
        <label>app category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_id__c</fullName>
        <label>app_id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_name__c</fullName>
        <label>company name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_download__c</fullName>
        <label>current download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>current_revenue__c</fullName>
        <label>current revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>previous_week_download__c</fullName>
        <label>previous week download</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>previous_week_revenue__c</fullName>
        <label>previous week revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>realease_data__c</fullName>
        <label>realease_data</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>APP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company_apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>